--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="navButton">
           Home
         </a>
-        <a class="navButton" href="/Projects/index.html">
+        <a class="navButton" href="">
           Projects
         </a>
         <a class="navButton">
