--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,26 +35,61 @@
 
 <header>
   <div class="row">
-    <div class="four columns">
-        <h1>Jake Reese</h1>
+    <div class="one column">
+      <br>
     </div>
-    <div class="eight columns">
+    <div class="four columns">
+      <h2 id="headerTitle">Jake Reese</h2>
+    </div>
+    <div class="two columns">
+      <br>
+    </div>
+    <div class="four columns">
       <div class="navBar">
         <a class="navButton">
           Home
         </a>
-        <a class="navButton" href="">
-          Projects
-        </a>
+        <div class="dropdown">
+          <div class="dropbtn">Projects</div>
+          <div class="dropdown-content">
+            <a href="#">Professional</a>
+            <a href="#">School Days</a>
+            <a href="#">Personal</a>
+          </div>
+        </div>
         <a class="navButton">
           About
         </a>
       </div>
     </div>
+    <div class="one column">
+      <br>
+    </div>
   </div>
 </header>
 <main>
-
+<div class="row">
+  <div class="one column">
+    <br>
+  </div>
+  <div class="five columns">
+    <h1>THIS SITE IS A W.I.P.</h1>
+    <h3>Hi, thanks for visiting so quickly!</h3>
+    <p>
+      Like it says above right there, this site is currently a work in progress with new works and pages being added as we speak (or I guess you read).
+      <br>
+      <br>
+      Well, since you're here I guess you can check out my youtube channel where some of my projects are hosted
+    </p>
+  </div>
+  <div class="five columns">
+    <img style="width: 100%;" src="/images/Nice Photo.PNG">
+    <p>heads up this photo is like 5 years old by now.</p>
+  </div>
+  <div class="one column">
+    <br>
+  </div>
+</div>
 </main>
 <footer>
   <div class="container">
@@ -65,7 +102,7 @@
         <br>
         Email: Jakereese986@gmail.com
         <br>
-        Phone: (312)860-1032
+        Phone: (312) 860-1032
       </div>
       <div class="four columns">
         Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
@@ -73,7 +110,7 @@
     </div>
     <div class="row">
       <div class="twelve columns">
-        Site Last Updated: 09/10/2025
+        Page Last Updated: 09/22/2025
       </div>
     </div>
   </div>
