--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home | Jake Reese Portfolio</title>
-  <meta name="description" content="Home Page for Jake Reese's Portfolio">
+  <title>404 | Jake Reese Portfolio</title>
+  <meta name="description" content="404 Error Page for Jake Reese's Portfolio">
   <meta name="author" content="Jake Reese">
 
   <!-- Mobile Specific Metas
@@ -21,10 +21,10 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
   
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!-- Font Awesome Link
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -32,7 +32,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
 
 </head>
 <body>
@@ -47,7 +47,6 @@
             <i class="fa-solid fa-bars"></i>
           </button>
         </div>
-
         <ul class="menu-items">
           <li>
             <a href="/index.html">Home</a>
@@ -68,23 +67,16 @@
 </header>
 
 <main>
-<div class="row">
-  <div class="one column">
-    <br>
-  </div>
-  <div class="five columns">
-    <h1>THIS SITE IS A W.I.P.</h1>
-    <h3>Hi, thanks for visiting so quickly!</h3>
-    <p>
-      Like it says above right there, this site is currently a work in progress with new works and pages being added as we speak (or I guess you read).
+<div id="PageNotFound">
+      <h1>You don't belong here.</h1>
+      <h3>(How did you get here I wonder?)</h3>
       <br>
       <br>
-      Well, since you're here I guess you can check out my youtube channel where some of my projects are hosted
-    </p>
-  </div>
-  <div class="five columns">
-    <img style="width: 100%;" src="/images/Nice Photo.PNG">
-    <p>heads up this photo is like 5 years old by now.</p>
+      <br>
+        <a href="/index.html">
+          <button>Let's get you back home.</button>
+        </a>
+    </div>
   </div>
   <div class="one column">
     <br>
