--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
 
 </head>
 <body>
@@ -68,28 +68,9 @@
 </header>
 
 <main>
-<div class="row">
-  <div class="one column">
-    <br>
-  </div>
-  <div class="five columns">
-    <h1>THIS SITE IS A W.I.P.</h1>
-    <h3>Hi, thanks for visiting so quickly!</h3>
-    <p>
-      Like it says above right there, this site is currently a work in progress with new works and pages being added as we speak (or I guess you read).
-      <br>
-      <br>
-      Well, since you're here I guess you can check out my youtube channel where some of my projects are hosted
-    </p>
-  </div>
-  <div class="five columns">
-    <img style="width: 100%;" src="/images/Nice Photo.PNG">
-    <p>heads up this photo is like 5 years old by now.</p>
-  </div>
-  <div class="one column">
-    <br>
-  </div>
-</div>
+
+  
+
 </main>
 
 <footer>
