--- a/404.html
+++ b/404.html
@@ -116,15 +116,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
-<script>
-  const toggleBtn = document.getElementById('toggle-nav-burger');
-  const menuItems = document.querySelector('.menu-items');
-
-  toggleBtn.addEventListener('click', () => {
-    menuItems.classList.toggle('show-menu-items');
-  })
-
-
-</script>
+<script src="/js/navMenu.js"></script>
 
 </html>
