--- a/contact/index.html
+++ b/contact/index.html
@@ -177,15 +177,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
-<script>
-  const toggleBtn = document.getElementById('toggle-nav-burger');
-  const menuItems = document.querySelector('.menu-items');
-
-  toggleBtn.addEventListener('click', () => {
-    menuItems.classList.toggle('show-menu-items');
-  })
-
-
-</script>
+<script src="/js/navMenu.js"></script>
+<script src="/js/topBannerFunc.js"></script>
 
 </html>
