--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 </head>
 <body>
 
+<div class="top-banner">
+  <p><strong>!!!</strong> This Page is still under construction <strong>!!!</strong></p>
+  <button id="top-banner_close"><i class="fa-solid fa-xmark"></i></button>
+</div>
+
 <header>
   <div class="row">
     <div class="twelve columns">
@@ -124,15 +129,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
-<script>
-  const toggleBtn = document.getElementById('toggle-nav-burger');
-  const menuItems = document.querySelector('.menu-items');
-
-  toggleBtn.addEventListener('click', () => {
-    menuItems.classList.toggle('show-menu-items');
-  })
-
-
-</script>
+<script src="/js/navMenu.js"></script>
+<script src="/js/topBannerFunc.js"></script>
 
 </html>
