--- a/contact/index.html
+++ b/contact/index.html
@@ -41,6 +41,11 @@
 
 <body>
 
+  <div class="top-banner">
+    <p><strong>!!!</strong> This Page is still under construction <strong>!!!</strong></p>
+    <button id="top-banner_close"><i class="fa-solid fa-xmark"></i></button>
+  </div>
+
   <header>
     <div class="row">
       <div class="twelve columns">
@@ -80,7 +85,7 @@
       <div class="row">
         <div class="ten columns">
           <h3>Contact Me!</h3>
-          
+
         </div>
         <div class="two columns">
           <br>
@@ -89,7 +94,7 @@
       <div class="row">
         <div class="six columns">
           <p>Fill out the form below to contact me via Email:</p>
-          
+
           <form action="https://api.web3forms.com/submit" method="POST">
             <input type="hidden" name="access_key" value="541efd75-c589-4427-8bf7-65f26455e5df">
             <div class="row">
@@ -132,19 +137,18 @@
         <div class="six columns">
           <p>You can also contact me by reaching out on these platforms:</p>
           <ul id="contactList">
-            <a href="https://instagram.com/bluedemonboi/"target="_blank"><li><i class="fa-brands fa-instagram"></i>  @bluedemonboi</li></a>
-            <a href="https://discord.com/users/bluedemonboi/"target="_blank"><li><i class="fa-brands fa-discord"></i>  @BlueDemonBoi</li></a>
+            <a href="https://instagram.com/bluedemonboi/" target="_blank">
+              <li><i class="fa-brands fa-instagram"></i> @bluedemonboi</li>
+            </a>
+            <a href="https://discord.com/users/bluedemonboi/" target="_blank">
+              <li><i class="fa-brands fa-discord"></i> @BlueDemonBoi</li>
+            </a>
             <br><br>
           </ul>
         </div>
       </div>
     </div>
-
-
-
-
   </main>
-
   <footer>
     <div class="container">
       <div class="row">
