--- a/about/index.html
+++ b/about/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home | Jake Reese Portfolio</title>
+  <title>About | Jake Reese Portfolio</title>
   <meta name="description" content="Home Page for Jake Reese's Portfolio">
   <meta name="author" content="Jake Reese">
 
@@ -17,14 +18,16 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
+
+  <link rel="stylesheet" href="/css/style.css">
 
   <!-- Font Awesome Link
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -35,77 +38,153 @@
   <link rel="icon" type="image/png" href="/images/favicon.png">
 
 </head>
+
 <body>
 
-<header>
-  <div class="row">
-    <div class="twelve columns">
-      <nav id="nav-container">
-        <div id="small-screen-elements">
-          <h2 id="headerTitle">Jake Reese</h2>
-          <button id="toggle-nav-burger">
-            <i class="fa-solid fa-bars"></i>
-          </button>
-        </div>
-
-        <ul class="menu-items">
-          <li>
-            <a href="/index.html">Home</a>
-          </li>
-          <li>
-            <a href="/projects/index.html">Projects</a>
-          </li>
-          <li>
-            <a href="/about/index.html">About</a>
-          </li>
-          <li>
-            <a href="/contact/index.html">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+  <div class="top-banner">
+    <p><strong>!!!</strong> This Page is still under construction <strong>!!!</strong></p>
+    <button id="top-banner_close"><i class="fa-solid fa-xmark"></i></button>
   </div>
-</header>
 
-<main>
-
-  
-
-</main>
-
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="six columns">
-        Contact Info:
-        <br>
-        Email: Jakereese986@gmail.com
-        <br>
-        Phone: (312) 860-1032
-        <br>
-        <br>
-      </div>
-      <div class="six columns">
-        Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
-        <br>
-        <br>
-      </div>
-    </div>
+  <header>
     <div class="row">
       <div class="twelve columns">
-        Page Last Updated: 09/23/2025
-        <br>
+        <nav id="nav-container">
+          <div id="small-screen-elements">
+            <h2 id="headerTitle">Jake Reese</h2>
+            <button id="toggle-nav-burger">
+              <i class="fa-solid fa-bars"></i>
+            </button>
+          </div>
+
+          <ul class="menu-items">
+            <li>
+              <a href="/index.html">Home</a>
+            </li>
+            <li>
+              <a href="/projects/index.html">Projects</a>
+            </li>
+            <li>
+              <a href="/about/index.html">About</a>
+            </li>
+            <li>
+              <a href="/contact/index.html">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <div class="subheader">
+    <h2>About The Creator</h2>
+  </div>
+
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="six columns">
+          <h3>So what do you wanna know?</h3>
+          <div class="exp-card-box">
+            <div class="expanding-card">
+              <div class="exp-card-title">Life Story</div>
+              <div class="exp-card-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Est explicabo temporibus fugiat
+                suscipit corrupti pariatur ex
+                dolores praesentium adipisci voluptate,
+                delectus consequuntur quam alias ipsum ipsam, laborum fuga,
+                possimus quos.
+              </div>
+            </div>
+            <div class="expanding-card">
+              <div class="exp-card-title">Education</div>
+              <div class="exp-card-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Est explicabo temporibus fugiat
+                suscipit corrupti pariatur ex
+                dolores praesentium adipisci voluptate,
+                delectus consequuntur quam alias ipsum ipsam, laborum fuga,
+                possimus quos.
+              </div>
+            </div>
+            <div class="expanding-card">
+              <div class="exp-card-title">Platforms & Media</div>
+              <div class="exp-card-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Est explicabo temporibus fugiat
+                suscipit corrupti pariatur ex
+                dolores praesentium adipisci voluptate,
+                delectus consequuntur quam alias ipsum ipsam, laborum fuga,
+                possimus quos.
+              </div>
+            </div>
+            <div class="expanding-card">
+              <div class="exp-card-title">Education</div>
+              <div class="exp-card-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Est explicabo temporibus fugiat
+                suscipit corrupti pariatur ex
+                dolores praesentium adipisci voluptate,
+                delectus consequuntur quam alias ipsum ipsam, laborum fuga,
+                possimus quos.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="six columns">
+          <div class="gallery-container">
+            <img src="/images/AboutPhotos/Photo01.jpg" id="main-display">
+            <div class="thumbnail-container">
+              <img src="/images/AboutPhotos/Photo01.jpg" alt="" class="thumbnail first">
+              <img src="/images/AboutPhotos/Photo02.jpg" alt="" class="thumbnail">
+              <img src="/images/AboutPhotos/Photo03.jpg" alt="" class="thumbnail">
+              <img src="/images/AboutPhotos/Photo04.jpg" alt="" class="thumbnail">
+            </div>
+          </div>
+          <div style="padding-bottom: 95vh;"></div>
+        </div>
+      </div>
+      <div class="row">
         <br>
       </div>
     </div>
-  </div>
-</footer>
+  </main>
 
-<!-- End Document
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="six columns">
+          Contact Info:
+          <br>
+          Email: Jakereese986@gmail.com
+          <br>
+          Phone: (312) 860-1032
+          <br>
+          <br>
+        </div>
+        <div class="six columns">
+          Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
+          <br>
+          <br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="twelve columns">
+          Page Last Updated: 09/23/2025
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
 <script src="/js/navMenu.js"></script>
 <script src="/js/topBannerFunc.js"></script>
+<script src="/js/gallery.js"></script>
 
 </html>
