--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <!-- Basic Page Needs
@@ -17,13 +18,15 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  
+
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Link
@@ -35,97 +38,99 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
+
 <body>
 
-<div class="top-banner">
-  <p><strong>!!!</strong> This Page is still under construction <strong>!!!</strong></p>
-  <button id="top-banner_close"><i class="fa-solid fa-xmark"></i></button>
-</div>
+  <div class="top-banner">
+    <p><strong>!!!</strong> This Page is still under construction <strong>!!!</strong></p>
+    <button id="top-banner_close"><i class="fa-solid fa-xmark"></i></button>
+  </div>
 
-<header>
-  <div class="row">
-    <div class="twelve columns">
-      <nav id="nav-container">
-        <div id="small-screen-elements">
-          <h2 id="headerTitle">Jake Reese</h2>
-          <button id="toggle-nav-burger">
-            <i class="fa-solid fa-bars"></i>
-          </button>
-        </div>
-
-        <ul class="menu-items">
-          <li>
-            <a href="/index.html">Home</a>
-          </li>
-          <li>
-            <a href="/projects/index.html">Projects</a>
-          </li>
-          <li>
-            <a href="/about/index.html">About</a>
-          </li>
-          <li>
-            <a href="/contact/index.html">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-</header>
-
-<main>
-<div class="row">
-  <div class="one column">
-    <br>
-  </div>
-  <div class="five columns">
-    <h1>THIS SITE IS A W.I.P.</h1>
-    <h3>Hi, thanks for visiting so quickly!</h3>
-    <p>
-      Like it says above right there, this site is currently a work in progress with new works and pages being added as we speak (or I guess you read).
-      <br>
-      <br>
-      Well, since you're here I guess you can check out my youtube channel where some of my projects are hosted
-    </p>
-  </div>
-  <div class="five columns">
-    <img style="width: 100%;" src="/images/Nice Photo.PNG">
-    <p>heads up this photo is like 5 years old by now.</p>
-  </div>
-  <div class="one column">
-    <br>
-  </div>
-</div>
-</main>
-
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="six columns">
-        Contact Info:
-        <br>
-        Email: Jakereese986@gmail.com
-        <br>
-        Phone: (312) 860-1032
-        <br>
-        <br>
-      </div>
-      <div class="six columns">
-        Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
-        <br>
-        <br>
-      </div>
-    </div>
+  <header>
     <div class="row">
       <div class="twelve columns">
-        Page Last Updated: 09/23/2025
+        <nav id="nav-container">
+          <div id="small-screen-elements">
+            <h2 id="headerTitle">Jake Reese</h2>
+            <button id="toggle-nav-burger">
+              <i class="fa-solid fa-bars"></i>
+            </button>
+          </div>
+
+          <ul class="menu-items">
+            <li>
+              <a href="/index.html">Home</a>
+            </li>
+            <li>
+              <a href="/projects/index.html">Projects</a>
+            </li>
+            <li>
+              <a href="/about/index.html">About</a>
+            </li>
+            <li>
+              <a href="/contact/index.html">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  
+  <main>
+    <div class="row">
+      <div class="one column">
         <br>
+      </div>
+      <div class="five columns">
+        <h1>THIS SITE IS A W.I.P.</h1>
+        <h3>Hi, thanks for visiting so quickly!</h3>
+        <p>
+          Like it says above right there, this site is currently a work in progress with new works and pages being added
+          as we speak (or I guess you read).
+          <br>
+          <br>
+          Well, since you're here I guess you can check out my youtube channel where some of my projects are hosted
+        </p>
+      </div>
+      <div class="five columns">
+        <img style="width: 100%;" src="/images/Nice Photo.PNG">
+        <p>heads up this photo is like 5 years old by now.</p>
+      </div>
+      <div class="one column">
         <br>
       </div>
     </div>
-  </div>
-</footer>
+  </main>
 
-<!-- End Document
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="six columns">
+          Contact Info:
+          <br>
+          Email: Jakereese986@gmail.com
+          <br>
+          Phone: (312) 860-1032
+          <br>
+          <br>
+        </div>
+        <div class="six columns">
+          Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
+          <br>
+          <br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="twelve columns">
+          Page Last Updated: 09/23/2025
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
