--- a/index.html
+++ b/index.html
@@ -103,32 +103,29 @@
   </main>
 
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="six columns">
-          Contact Info:
-          <br>
-          Email: Jakereese986@gmail.com
-          <br>
-          Phone: (312) 860-1032
-          <br>
-          <br>
-        </div>
-        <div class="six columns">
-          Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
-          <br>
-          <br>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="three columns">
+        <br>
       </div>
-      <div class="row">
-        <div class="twelve columns">
-          Page Last Updated: 09/23/2025
-          <br>
-          <br>
-        </div>
+      <div class="six columns">
+        Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
+        <br>
+        <br>
+      </div>
+      <div class="three columns">
+        <br>
       </div>
     </div>
-  </footer>
+    <div class="row">
+      <div class="twelve columns">
+        Page Last Updated: 09/24/2025
+        <br>
+        <br>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
