--- a/projects/index.html
+++ b/projects/index.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home | Jake Reese Portfolio</title>
-  <meta name="description" content="Home Page for Jake Reese's Portfolio">
+  <title>Projects | Jake Reese Portfolio</title>
+  <meta name="description" content="Project Gallery for Jake Reese's Portfolio">
   <meta name="author" content="Jake Reese">
 
   <!-- Mobile Specific Metas
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/css/skeleton.css">
   
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/projectCard.css">
 
   <!-- Font Awesome Link
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -67,22 +68,254 @@
   </div>
 </header>
 
+<div class="subheader">
+  <h2>Greatest Hits</h2>
+</div>
+
 <main>
+  <div class="row">
+    <!-- Facing Yourself -->
+    <div class="four columns">
+      <div class="project-card" id="facingYourself">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="facingYourself"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">Facing Yourself</div>
+            <div class="project-type">Multimedia</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/facingYourself.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  
+    <!-- Riptide Website -->
+    <div class="four columns">
+      <div class="project-card" id="riptide">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="riptide"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">Riptide Tech Site</div>
+            <div class="project-type">Web Design / Development</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/riptideTech.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- Visual Journal -->
+    <div class="four columns">
+      <div class="project-card" id="visJour">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="visJour"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">Visual Journal</div>
+            <div class="project-type">Graphic Design</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/visualJournal.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <!-- Variant Website -->
+    <div class="four columns">
+      <div class="project-card" id="variWeb">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="variWeb"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">Variant Universe Site</div>
+            <div class="project-type">Web / Graphic Design</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/variantUniverse.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- "The Meeting" Short Film -->
+    <div class="four columns">
+      <div class="project-card" id="meetFilm">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="meetFilm"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">"The Meeting" Short Film</div>
+            <div class="project-type">3D Animation / Video Editing</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/theMeeting.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- City Photography -->
+    <div class="four columns">
+      <div class="project-card" id="cityPhotos">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="cityPhotos"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">City Photography</div>
+            <div class="project-type">Photography</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/cityPhotos.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <!-- Content Creation -->
+    <div class="four columns">
+      <div class="project-card" id="youTwitch">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="youTwitch"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">Youtube & Twitch Channels</div>
+            <div class="project-type">Content Creation</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/youTwitch.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Model Photography -->
+    <div class="four columns">
+      <div class="project-card" id="modelPhotos">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="modelPhotos"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">Model Photography</div>
+            <div class="project-type">Photography</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/modelPhotos.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- The "G" Project -->
+    <div class="four columns">
+      <div class="project-card" id="theGPro">
+        <div class="row">
+          <div class="one column">
+            <br>
+          </div>
+          <div class="ten columns">
+            <div class="project-photo" id="theGPro"></div>
+          </div>
+          <div class="one column">
+            <br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="eight columns">
+            <div class="project-title">The "G" Project</div>
+            <div class="project-type">Multimedia</div>
+          </div>
+          <div class="four columns buttonMobileFix">
+            <a href="/projects/projectPages/theGProject.html"><button class="goToProject">Read More</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 
 <footer>
   <div class="container">
     <div class="row">
-      <div class="six columns">
-        Contact Info:
-        <br>
-        Email: Jakereese986@gmail.com
-        <br>
-        Phone: (312) 860-1032
-        <br>
+      <div class="three columns">
         <br>
       </div>
       <div class="six columns">
@@ -90,10 +323,13 @@
         <br>
         <br>
       </div>
+      <div class="three columns">
+        <br>
+      </div>
     </div>
     <div class="row">
       <div class="twelve columns">
-        Page Last Updated: 09/23/2025
+        Page Last Updated: 09/24/2025
         <br>
         <br>
       </div>
