--- a/404.html
+++ b/404.html
@@ -87,13 +87,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="six columns">
-        Contact Info:
-        <br>
-        Email: Jakereese986@gmail.com
-        <br>
-        Phone: (312) 860-1032
-        <br>
+      <div class="three columns">
         <br>
       </div>
       <div class="six columns">
@@ -101,10 +95,13 @@
         <br>
         <br>
       </div>
+      <div class="three columns">
+        <br>
+      </div>
     </div>
     <div class="row">
       <div class="twelve columns">
-        Page Last Updated: 09/23/2025
+        Page Last Updated: 09/24/2025
         <br>
         <br>
       </div>
