--- a/contact/index.html
+++ b/contact/index.html
@@ -6,8 +6,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home | Jake Reese Portfolio</title>
-  <meta name="description" content="Home Page for Jake Reese's Portfolio">
+  <title>Contact | Jake Reese Portfolio</title>
+  <meta name="description" content="Contact Page for Jake Reese's Portfolio">
   <meta name="author" content="Jake Reese">
 
   <!-- Mobile Specific Metas
