--- a/projects/index.html
+++ b/projects/index.html
@@ -21,11 +21,11 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/skeleton.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
   
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/projectCard.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/projectCard.css">
 
   <!-- Font Awesome Link
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
