--- a/projects/index.html
+++ b/projects/index.html
@@ -28,6 +28,8 @@
   <link rel="stylesheet" href="/css/skeleton.css">
 
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/colorMap.css">
+
   <link rel="stylesheet" href="/css/projectCard.css">
 
   <!-- Font Awesome Link
@@ -40,7 +42,7 @@
 
 </head>
 
-<body>
+<body id="projectGallery">
 
   <header>
     <div class="row">
@@ -72,9 +74,7 @@
     </div>
   </header>
 
-  <div class="subheader">
-    <h2>Greatest Hits</h2>
-  </div>
+<div style="padding-top: 1rem;"></div>
 
   <main>
     <div class="row">
