--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="css/skeleton.css">
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/colorMap.css">
 
   <!-- Font Awesome Link
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
