--- a/projects/projectPages/riptideTech.html
+++ b/projects/projectPages/riptideTech.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/css/skeleton.css">
   
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/colorMap.css">
 
   <!-- Font Awesome Link
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
