--- a/index.html
+++ b/index.html
@@ -57,16 +57,12 @@
               <i class="fa-solid fa-bars"></i>
             </button>
           </div>
-
           <ul class="menu-items">
             <li>
               <a href="/index.html">Home</a>
             </li>
             <li>
               <a href="/projects/index.html">Projects</a>
-            </li>
-            <li>
-              <a href="/about/index.html">About</a>
             </li>
             <li>
               <a href="/contact/index.html">Contact</a>
@@ -76,15 +72,15 @@
       </div>
     </div>
   </header>
-  
+
   <main>
     <div class="row">
       <div class="one column">
         <br>
       </div>
       <div class="five columns">
-        <h1>THIS SITE IS A W.I.P.</h1>
-        <h3>Hi, thanks for visiting so quickly!</h3>
+        <h1>Welcome to the my portfolio!</h1>
+        <h5>(Glad you're here.)</h5>
         <p>
           Like it says above right there, this site is currently a work in progress with new works and pages being added
           as we speak (or I guess you read).
@@ -93,9 +89,8 @@
           Well, since you're here I guess you can check out my youtube channel where some of my projects are hosted
         </p>
       </div>
-      <div class="five columns">
-        <img style="width: 100%;" src="/images/Nice Photo.PNG">
-        <p>heads up this photo is like 5 years old by now.</p>
+      <div class="four offset-by-one columns">
+        <img style="width: 100%;" src="/images/portrait.jpg">
       </div>
       <div class="one column">
         <br>
@@ -104,29 +99,29 @@
   </main>
 
   <footer>
-  <div class="container">
-    <div class="row">
-      <div class="three columns">
-        <br>
+    <div class="container">
+      <div class="row">
+        <div class="three columns">
+          <br>
+        </div>
+        <div class="six columns">
+          Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
+          <br>
+          <br>
+        </div>
+        <div class="three columns">
+          <br>
+        </div>
       </div>
-      <div class="six columns">
-        Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
-        <br>
-        <br>
-      </div>
-      <div class="three columns">
-        <br>
+      <div class="row">
+        <div class="twelve columns">
+          Page Last Updated: 09/24/2025
+          <br>
+          <br>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="twelve columns">
-        Page Last Updated: 09/24/2025
-        <br>
-        <br>
-      </div>
-    </div>
-  </div>
-</footer>
+  </footer>
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
