--- a/projects/projectPages/cityPhotos.html
+++ b/projects/projectPages/cityPhotos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <!-- Basic Page Needs
@@ -17,13 +18,15 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/skeleton.css">
-  
+
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/colorMap.css">
 
@@ -36,70 +39,67 @@
   <link rel="icon" type="image/png" href="/images/favicon.png">
 
 </head>
+
 <body>
 
-<header>
-  <div class="row">
-    <div class="twelve columns">
-      <nav id="nav-container">
-        <div id="small-screen-elements">
-          <h2 id="headerTitle">Jake Reese</h2>
-          <button id="toggle-nav-burger">
-            <i class="fa-solid fa-bars"></i>
-          </button>
-        </div>
-
-        <ul class="menu-items">
-          <li>
-            <a href="/index.html">Home</a>
-          </li>
-          <li>
-            <a href="/projects/index.html">Projects</a>
-          </li>
-          <li>
-            <a href="/about/index.html">About</a>
-          </li>
-          <li>
-            <a href="/contact/index.html">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-</header>
-
-<main>
-
-  
-
-</main>
-
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="three columns">
-        <br>
-      </div>
-      <div class="six columns">
-        Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
-        <br>
-        <br>
-      </div>
-      <div class="three columns">
-        <br>
-      </div>
-    </div>
+  <header>
     <div class="row">
       <div class="twelve columns">
-        Page Last Updated: 09/24/2025
-        <br>
-        <br>
+        <nav id="nav-container">
+          <div id="small-screen-elements">
+            <h2 id="headerTitle">Jake Reese</h2>
+            <button id="toggle-nav-burger">
+              <i class="fa-solid fa-bars"></i>
+            </button>
+          </div>
+          <ul class="menu-items">
+            <li>
+              <a href="/index.html">Home</a>
+            </li>
+            <li>
+              <a href="/projects/index.html">Projects</a>
+            </li>
+            <li>
+              <a href="/contact/index.html">Contact</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </div>
-  </div>
-</footer>
+  </header>
 
-<!-- End Document
+  <main>
+
+
+
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="three columns">
+          <br>
+        </div>
+        <div class="six columns">
+          Designed and Coded by Jake Reese using <a href="http://getskeleton.com">Skeleton Boilerplate</a>
+          <br>
+          <br>
+        </div>
+        <div class="three columns">
+          <br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="twelve columns">
+          Page Last Updated: 09/24/2025
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
