--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
 </head>
 
 <body>
-
-  <div class="top-banner">
-    <p><strong>!!!</strong> This Page is still under construction <strong>!!!</strong></p>
-    <button id="top-banner_close"><i class="fa-solid fa-xmark"></i></button>
-  </div>
-
   <header>
     <div class="row">
       <div class="twelve columns">
@@ -82,11 +76,19 @@
         <h1>Welcome to the my portfolio!</h1>
         <h5>(Glad you're here.)</h5>
         <p>
-          Like it says above right there, this site is currently a work in progress with new works and pages being added
-          as we speak (or I guess you read).
+          Hey, I'm Jake Reese, <strong>and I like to make stuff.</strong> If you would like to look over some of my best projects, click the tab in the menu!
+        </p>
+        <h3>Backstory:</h3>
+        <p id="backstory">
+          While (most of) the projects in this portfolio were made from college onwards, 
+          I've been making art since I could literally remember. 
           <br>
           <br>
-          Well, since you're here I guess you can check out my youtube channel where some of my projects are hosted
+          From making little flipbooks on post-it note pads (before I knew they were called flipbooks), 
+          to starting my first YouTube channel when I was only 8 years old, I've always liked to make and create.
+          My original plan was to be a music composer, and I worked towards that all throughout my childhood and high school career. 
+          When I applied for the music school at DePaul University, I realized I'd be locked into working on classical or jazz music with my trombone.
+          So I changed my major and pivoted over to graphic design, chosen based off of my year or two tinkering with Adobe Photoshop at the time, and well, here we are!
         </p>
       </div>
       <div class="four offset-by-one columns">
@@ -115,7 +117,7 @@
       </div>
       <div class="row">
         <div class="twelve columns">
-          Page Last Updated: 09/24/2025
+          Page Last Updated: 09/26/2025
           <br>
           <br>
         </div>
