--- a/projects/projectPages/youTwitch.html
+++ b/projects/projectPages/youTwitch.html
@@ -42,6 +42,11 @@
 
 <body>
 
+  <div class="top-banner">
+    <p><strong>!!!</strong> This Page is still under construction <strong>!!!</strong></p>
+    <button id="top-banner_close"><i class="fa-solid fa-xmark"></i></button>
+  </div>
+
   <header>
     <div class="row">
       <div class="twelve columns">
